# mdbook-syntect

./: Cargo.toml  license.md  readme.md
assets/: style.css
src/: cfg.rs  embed.rs  lib.rs  main.rs  preprocess.rs  render.rs  scan.rs
