[package]
name = "mdbook-syntect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
mdbook = { version = "0.4.37", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
syntect = "5.2.0"
